# push_swap

./: CMakeLists.txt  Makefile  a.out  after_pb.c  ask_function.c  author  check_num.c  check_str.c  checker  ft_push_swap.h  main.c  major.c  move_b.c  pa.c  pb.c  prepare_move_pb.c  push_swap  push_swap.c  ra.c  rb.c  rr.c  rra.c  rrb.c  rrr.c  sa.c  sb.c  search_min.c  search_minor.c  skip_box.c  sort.c  sort_a.c  sort_b.c  ss.c  sum_position.c  sum_position_checker.c  your_choise.c  your_choise2.c  your_choise_minor.c
includes/: ft_push_swap.h
libft/: Makefile  ask_function.c  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_count.c  ft_count_words.c  ft_diglength.c  ft_find_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_labs.c  ft_list.h  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  (+35 more)
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
srcs/: after_pb.c  ask_function.c  check_int.c  check_num.c  check_str.c  checker_main.c  distance.c  distance_2.c  error.c  first_part.c  free_new.c  free_stack.c  get_next_line.c  if_sorted.c  index_assignment.c  looking_str.c  main.c  major.c  making_dec.c  move_b.c  move_back.c  move_first.c  move_fourth.c  move_second.c  move_third.c  over_three_variables.c  pa.c  pa_20_var.c  pb.c  pb_5_variables.c  plus_check.c  prepare_move_pb.c  push_swap.c  put_down.c  ra.c  rb.c  read_number.c  rr.c  rra.c  rrb.c  (+22 more)
