cmake_minimum_required(VERSION 3.15)
project(push_swap_master C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)

add_executable(push_swap_master
        includes/ft_push_swap.h
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count.c
        libft/ft_count_words.c
        libft/ft_diglength.c
        libft/ft_find_words.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_labs.c
        libft/ft_list.h
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        srcs/check_int.c
        srcs/check_num.c
        srcs/check_str.c
        srcs/checker_main.c
        srcs/distance.c
        srcs/distance_2.c
        srcs/error.c
        srcs/first_part.c
        srcs/free_new.c
        srcs/free_stack.c
        srcs/get_next_line.c
        srcs/if_sorted.c
        srcs/index_assignment.c
        srcs/looking_str.c
        srcs/major.c
        srcs/making_dec.c
        srcs/move_back.c
        srcs/move_first.c
        srcs/move_fourth.c
        srcs/move_second.c
        srcs/move_third.c
        srcs/over_three_variables.c
        srcs/pa.c
        srcs/pa_20_var.c
        srcs/pb.c
        srcs/pb_5_variables.c
        srcs/plus_check.c
        srcs/push_swap.c
        srcs/put_down.c
        srcs/ra.c
        srcs/rb.c
        srcs/read_number.c
        srcs/rr.c
        srcs/rra.c
        srcs/rrb.c
        srcs/rrr.c
        srcs/sa.c
        srcs/sb.c
        srcs/second_part.c
        srcs/skip_box.c
        srcs/sort.c
        srcs/sort_it.c
        srcs/ss.c
        srcs/three_variables.c
        srcs/until_five.c
        srcs/until_five_functions.c
        srcs/until_hundred_one.c
        srcs/until_twenty.c)
